--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
+@import url('./timer.css');
 @import url('./header.css');
 
 :root {
