--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -29,9 +29,13 @@ button {
 font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.04em;
-color: #989898;
-background-color: #cfcfcf;
+color: #fff;
+background-color: #4e75ff;
 border: 0;
+}
+button:disabled {
+    color: #989898;
+    background-color: #cfcfcf;
 }
 .timer {
     display: flex;
